# backend_labs

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 0b3d5ca6cf90_first_migration.py  2e569cea206e_create_roles_permisson.py  51ca89b33536_create_user.py  7a6a43c477f9_create_token.py  b8d55e0f5af2_create_change_logs.py  b96f5891696f_create_token.py  c056a3844407_update_otp.py  cce48983d369_create_revoked_tokens.py  d08d39fd0bf1_first_migration.py  ec8ae1bf9367_first_migration.py
certs/: jwt-private.pem  jwt-public.pem
src/: __main__.py  app.py  dao.py  database.py  models.py  settings.py  tables.py
src/api/: auth.py
src/auth/: dao.py  models.py  routers.py  schemas.py  services.py  utils.py
src/email/: services.py
src/log/: dao.py  models.py  schemas.py  services.py  utils.py
src/models/: auth.py
src/role_policy/: dao.py  models.py  routers.py  schemas.py  seed.py  services.py
src/services/: auth.py
